--- a/css/index.css
+++ b/css/index.css
@@ -138,7 +138,7 @@
         font-size: 10px;
     }
     body{
-        background-image: url(../img/giphy\ \(10\).gif);
+        background-image: url(./img/giphy\ \(10\).gif);
     }
     #apresentacao button{
     animation-name: pisca;
